--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "node server.js"
   },
   "dependencies": {
+    "@capacitor/android": "^8.1.0",
+    "@capacitor/cli": "^8.1.0",
+    "@capacitor/core": "^8.1.0",
     "express": "^4.22.1",
     "socket.io": "^4.8.3"
   }
