--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,22 +1,30 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python Debugger: Current File",
-            "type": "debugpy",
+            "type": "node",
             "request": "launch",
-            "program": "${file}",
-            "console": "integratedTerminal"
+            "name": "تشغيل السيرفر (Server)",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "program": "${workspaceFolder}/server.js"
         },
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
+            "name": "فتح اللعبة في المتصفح (Chrome)",
             "url": "http://localhost:3000",
             "webRoot": "${workspaceFolder}"
+        }
+    ],
+    "compounds": [
+        {
+            "name": "تشغيل اللعبة كاملة (Full Game)",
+            "configurations": [
+                "تشغيل السيرفر (Server)",
+                "فتح اللعبة في المتصفح (Chrome)"
+            ]
         }
     ]
 }
